Start implementing recursive automata